--- a/onlineStore/onlineStore/templates/registration/register.html
+++ b/onlineStore/onlineStore/templates/registration/register.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="#">
+      <form action="post">
         <div class="row justify-content-md-center">
           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
             <div class="login-screen">
